RESOLVED FIXED158088
Invalidate style for newly added nodes in Node::insertedInto
https://bugs.webkit.org/show_bug.cgi?id=158088
Summary Invalidate style for newly added nodes in Node::insertedInto
Antti Koivisto
Reported 2016-05-25 14:08:18 PDT
Single place and doing this earlier can avoid some work.
Attachments
patch (2.72 KB, patch)
2016-05-25 14:15 PDT, Antti Koivisto
darin: review+
Antti Koivisto
Comment 1 2016-05-25 14:15:02 PDT
WebKit Commit Bot
Comment 2 2016-05-25 14:16:29 PDT
Attachment 279809 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3 2016-05-25 23:50:02 PDT
Note You need to log in before you can comment on or make changes to this bug.